--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "uart.h": "c",
         "spi.h": "c",
         "sequence.h": "c",
-        "buttons.h": "c"
+        "buttons.h": "c",
+        "interrupt.h": "c"
     }
 }
