--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "spi.h": "c",
         "sequence.h": "c",
         "buttons.h": "c",
-        "interrupt.h": "c"
+        "interrupt.h": "c",
+        "stdint.h": "c"
     }
 }
