--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "buttons.h": "c",
         "interrupt.h": "c",
         "stdint.h": "c",
-        "timer.h": "c"
+        "timer.h": "c",
+        "buzzer.h": "c"
     }
 }
