Fixed header file imports, fixed delay_init()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "interrupt.h": "c",
         "stdint.h": "c",
         "timer.h": "c",
-        "buzzer.h": "c"
+        "buzzer.h": "c",
+        "states.h": "c"
     }
 }
