changed get duration result calc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "stdint.h": "c",
         "timer.h": "c",
         "buzzer.h": "c",
-        "states.h": "c"
+        "states.h": "c",
+        "delay.h": "c"
     }
 }
